--- a/styles.css
+++ b/styles.css
@@ -5,19 +5,49 @@
 }
 
 body {
-    background: url(./images/background1.jpg);
+    background-image: url(./images/background2.jpg);
+    background-size: cover;
 }
 
 .top {
     text-align: center;
-    color: rgb(255, 230, 87);
+    background-color: rgba(111, 111, 245, 0.8);
+    padding: 20px;
+    color: rgb(213, 248, 13);
+}
+
+h1 {
+    font-size: 2em;
+    margin-bottom: 7px;
+}
+
+.top p {
+    font-size: 1.3em;
+    font-style: italic;
 }
 
 form {
-    background-color: rgba(2, 77, 112, 0.8);
+    background-color: rgba(2, 77, 112, 0.7);
     width: 60%;
     min-width: 400px;
     max-width: 800px;
-    margin: 10px auto;
+    margin: 20px auto;
+    padding: 20px;
     color: white;
+    font-size: 1.7em;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+fieldset {
+    border: none;
+    margin: 15px;
+}
+
+label {
+    display: block;
+}
+
+input {
+    line-height: 1.5;
+    padding: 0 10px;
 }
