--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,13 @@ body {
 
 .top {
     text-align: center;
-    background-color: rgba(111, 111, 245, 0.8);
+    background-color: rgba(2, 77, 112, 0.8);
     padding: 20px;
-    color: rgb(213, 248, 13);
+    color: rgb(238, 156, 4);
+    width: 50%;
+    min-width: 400px;
+    max-width: 800px;
+    margin: 1.8rem auto;
 }
 
 h1 {
@@ -27,27 +31,64 @@ h1 {
 }
 
 form {
-    background-color: rgba(2, 77, 112, 0.7);
-    width: 60%;
+    background-color: rgba(2, 77, 112, 0.8);
+    width: 50%;
     min-width: 400px;
     max-width: 800px;
     margin: 20px auto;
     padding: 20px;
-    color: white;
+    color: rgb(116, 209, 128);
     font-size: 1.7em;
     font-family: 'Times New Roman', Times, serif;
 }
 
 fieldset {
     border: none;
-    margin: 15px;
+    padding-left: 50px;
+    margin: 20px auto;
 }
 
-label {
+label,
+legend,
+.checker {
     display: block;
+    font-weight: 500;
+    margin: 10px 0;
 }
 
-input {
-    line-height: 1.5;
-    padding: 0 10px;
+#name,
+#email,
+#age {
+    line-height: 1.6;
+    padding: 5px 15px;
+    margin-left: 20px;
+    width: 50%;
+}
+
+select {
+    padding: 5px 10px;
+    margin-left: 20px;
+}
+
+input[type="checkbox"] {
+    margin-left: 10px;
+}
+
+#more {
+    display: block;
+    margin-top: 8px;
+}
+
+input[type="submit"] {
+    display: block;
+    width: 50%;
+    padding: 10px;
+    margin: auto;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: large;
+    font-weight: bold;
+    color: rgb(5, 100, 64);
+    background-color: rgb(255, 185, 54);
+    border: none;
+    cursor: pointer;
 }
